package Model;

public class ConsultationPratitionnersModel {
}
